# proot

./: .gitignore  README.rst
src/: CMakeLists.txt  GNUmakefile  arch.h
src/cli/: cli.c  fakedb2fsconfig.c  proot.c  proot.h
src/execve/: enter.c
src/extension/: extension.h
src/extension/fake_id0/: fake_id0.c  fake_id0.h  fake_id0_db.c  file.c  file_lie.c
src/path/: glue.c  path.c  temp.c
src/syscall/: exit.c
src/tracee/: abi.h  event.c  tracee.c  tracee.h
